--- a/h5_probe.ipynb
+++ b/h5_probe.ipynb
@@ -11,9 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Reads in an h5 file from Lead Labs Willow System (or anything that saves data as h5 files)\n",
+    "- Reads in an h5 file from Lead Labs Willow System \n",
     "- Interprets the probe map and assigns impedance data to individual sites on the probe\n",
-    "- Displays selected channels (every 4th channel) at a time for exploring the traces individually\n",
+    "- Displays 1 second traces from each channel as arranged on the probe map\n",
     "- Filters the data between 400 and 9500 Hz (in vivo recordings)"
    ]
   },
@@ -34,6 +34,7 @@
     "impfile = 'impedance_20200403-111349.h5' # Impedance File\n",
     "basefile = 'experiment_C20200403-111923.h5' # Saline baseline file\n",
     "fs = 30000\n",
+    "chan_range = [0,64]\n",
     "col_num = 3 # columns per shank\n",
     "row_num = [21,20,21] # rows per column (# values should == # columns)"
    ]
@@ -260,6 +261,7 @@
    ],
    "source": [
     "window = [0, 30000]\n",
+    "channels = list(range(chan_range[0],chan_range[1]))\n",
     "means = []\n",
     "medians = []\n",
     "sds = []\n",
@@ -305,7 +307,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167 168 169 170 171 172 173 174 175 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191 192 193 194 195 196 197 198 199 200 201 202 203 204 205 206 207 208 209 210 211 212 213 214 215 216 217 218 219 220 221 222 223 224 225 226 227 228 229 230 231 232 233 234 235 236 237 238 239 240 241 242 243 244 245 246 247 248 249 250 251 252 253 254 255 "
+      "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 "
      ]
     }
    ],
@@ -456,8 +458,8 @@
     "# Add datasets to h5 file: impedance, median imp, range, 25th and 75th percentiles, mean noise from sub,\n",
     "# potential bad channels filtered traces\n",
     "hf_probe = h5py.File(basefile.replace('.h5', '_probe.h5'), 'w')\n",
-    "hf_probe.create_dataset('filtered_x', data = list(range(0,len(filtered.iloc[:,0]))))\n",
-    "hf_probe.create_dataset('filtered_y', data = filtered.iloc[:,len(channels)-1])\n",
+    "hf_probe.create_dataset('filtered_x', data = filtered.iloc[:,0])\n",
+    "hf_probe.create_dataset('filtered_y', data = filtered.iloc[:,channels])\n",
     "hf_probe.create_dataset('unfiltered_stats', data = unfiltered_stats)\n",
     "hf_probe.create_dataset('filtered_stats', data = filtered_stats)\n",
     "hf_probe.close()"
@@ -472,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -563,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
