minor fixes in filenaming

--- a/h5_probe.ipynb
+++ b/h5_probe.ipynb
@@ -34,7 +34,7 @@
     "impfile = 'impedance_20200403-111349.h5' # Impedance File\n",
     "basefile = 'experiment_C20200403-111923.h5' # Saline baseline file\n",
     "fs = 30000\n",
-    "chan_range = [0,64]\n",
+    "chan_range = [0,63]\n",
     "col_num = 3 # columns per shank\n",
     "row_num = [21,20,21] # rows per column (# values should == # columns)"
    ]
@@ -451,15 +451,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add datasets to h5 file: impedance, median imp, range, 25th and 75th percentiles, mean noise from sub,\n",
     "# potential bad channels filtered traces\n",
-    "hf_probe = h5py.File(basefile.replace('.h5', '_probe.h5'), 'w')\n",
+    "\n",
+    "hf_probe = h5py.File(basefile.replace('.h5', '_probe_' + str(chan_range[1]) + '.h5'), 'w')\n",
     "hf_probe.create_dataset('filtered_x', data = filtered.iloc[:,0])\n",
-    "hf_probe.create_dataset('filtered_y', data = filtered.iloc[:,channels])\n",
+    "hf_probe.create_dataset('filtered_y', data = filtered.loc[:,channels])\n",
     "hf_probe.create_dataset('unfiltered_stats', data = unfiltered_stats)\n",
     "hf_probe.create_dataset('filtered_stats', data = filtered_stats)\n",
     "hf_probe.close()"
@@ -474,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {
     "scrolled": false
    },
@@ -547,7 +548,7 @@
     "            ch_num = ch_num + 1\n",
     "    fig.text(0.0, 0.5, r'Amplitude ($\\mu$V)', ha='center', rotation='vertical', fontsize = 18)\n",
     "    fig.text(0.5, 0.0, 'Time (ms)', va='center',  fontsize = 18)\n",
-    "    plt.savefig (basefile.replace('.h5','_grid_unfiltered.png'))\n",
+    "    plt.savefig (basefile.replace('.h5','_grid_unfiltered_' + str(chan_range[1]) + '.png'))\n",
     "    display(HTML('<hr>'))\n",
     "\n",
     "shank_num = 1\n",
@@ -565,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {
     "scrolled": false
    },
@@ -638,7 +639,7 @@
     "            ch_num = ch_num + 1\n",
     "    fig.text(0.0, 0.5, r'Amplitude ($\\mu$V)', ha='center', rotation='vertical', fontsize = 18)\n",
     "    fig.text(0.5, 0.0, 'Time (ms)', va='center',  fontsize = 18)\n",
-    "    plt.savefig ('shank' + str(shank_num) + '_grid_unfiltered.png')\n",
+    "    plt.savefig ('shank' + str(shank_num) + '_grid_filtered_' + str(chan_range[1]) + '.png')\n",
     "    display(HTML('<hr>'))\n",
     "\n",
     "shank_num = 1\n",
@@ -646,6 +647,13 @@
     "chans = list(np.arange(0,shank_num*(col_num + sum(row_num))))\n",
     "grid_plot_filtered(chans, win[0], win[1], 1, filtered)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
