--- a/h5_explorer.ipynb
+++ b/h5_explorer.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -166,10 +166,7 @@
     "    return df\n",
     "\n",
     "filtered = pd.DataFrame()\n",
-    "filtered = get_filtered(0, 64, df_64)\n",
-    "\n",
-    "\n",
-    "    \n"
+    "filtered = get_filtered(0, 64, filtered)"
    ]
   },
   {
@@ -183,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -455,7 +452,7 @@
     "            ch_num = ch_num + 1\n",
     "    fig.text(0.0, 0.5, r'Amplitude ($\\mu$V)', ha='center', rotation='vertical', fontsize = 18)\n",
     "    fig.text(0.5, 0.0, 'Time (ms)', va='center',  fontsize = 18)\n",
-    "    plt.savefig (datafile.replace('.h5','_grid_unfiltered' + str(chan_num) + '.png'))\n",
+    "    plt.savefig (datafile.replace('.h5','_unfiltered' + str(chan_num) + '.png'))\n",
     "    display(HTML('<hr>'))\n",
     "\n",
     "\n",
@@ -473,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -546,7 +543,7 @@
     "            ch_num = ch_num + 1\n",
     "    fig.text(0.0, 0.5, r'Amplitude ($\\mu$V)', ha='center', rotation='vertical', fontsize = 18)\n",
     "    fig.text(0.5, 0.0, 'Time (ms)', va='center',  fontsize = 18)\n",
-    "    plt.savefig (datafile.replace('.h5','_grid_unfiltered' + str(chan_num) + '.png'))\n",
+    "    plt.savefig (datafile.replace('.h5','_filtered_' + str(chan_num) + '.png'))\n",
     "    display(HTML('<hr>'))\n",
     "\n",
     "\n",
@@ -554,6 +551,13 @@
     "chans = list(np.arange(0,col_num + sum(row_num)))\n",
     "grid_plot_filtered(chans, win[0], win[1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
