--- a/h5_probe.ipynb
+++ b/h5_probe.ipynb
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 "
+      "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 "
      ]
     }
    ],
@@ -340,10 +340,7 @@
     "    return df\n",
     "\n",
     "filtered = pd.DataFrame()\n",
-    "filtered = get_filtered(channels, filtered)\n",
-    "\n",
-    "\n",
-    "    \n"
+    "filtered = get_filtered(channels, filtered)   \n"
    ]
   },
   {
@@ -451,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,12 +467,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plot unfiltered experimental data  from Shank1 as grid"
+    "## Plot unfiltered probe data as grid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -548,7 +545,7 @@
     "            ch_num = ch_num + 1\n",
     "    fig.text(0.0, 0.5, r'Amplitude ($\\mu$V)', ha='center', rotation='vertical', fontsize = 18)\n",
     "    fig.text(0.5, 0.0, 'Time (ms)', va='center',  fontsize = 18)\n",
-    "    plt.savefig (basefile.replace('.h5','_grid_unfiltered_' + str(chan_range[1]) + '.png'))\n",
+    "    plt.savefig (basefile.replace('.h5','_probe_unfiltered_' + str(chan_range[1]+1) + '.png'))\n",
     "    display(HTML('<hr>'))\n",
     "\n",
     "shank_num = 1\n",
@@ -561,12 +558,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plot Filtered Experimental Data from Shank1"
+    "## Plot filtered probe data as grid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -639,7 +636,7 @@
     "            ch_num = ch_num + 1\n",
     "    fig.text(0.0, 0.5, r'Amplitude ($\\mu$V)', ha='center', rotation='vertical', fontsize = 18)\n",
     "    fig.text(0.5, 0.0, 'Time (ms)', va='center',  fontsize = 18)\n",
-    "    plt.savefig ('shank' + str(shank_num) + '_grid_filtered_' + str(chan_range[1]) + '.png')\n",
+    "    plt.savefig ('shank' + str(shank_num) + '_probe_filtered_' + str(chan_range[1] + 1) + '.png')\n",
     "    display(HTML('<hr>'))\n",
     "\n",
     "shank_num = 1\n",
