--- a/h5_subtractor.ipynb
+++ b/h5_subtractor.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -210,7 +210,7 @@
     "            ch_num = ch_num + 1\n",
     "    fig.text(0.0, 0.5, r'Amplitude ($\\mu$V)', ha='center', rotation='vertical', fontsize = 18)\n",
     "    fig.text(0.5, 0.0, 'Time (ms)', va='center',  fontsize = 18)\n",
-    "    plt.savefig (basefile.replace('.h5','_grid_subtracted_' + str(chan_range[1]) + '.png'))\n",
+    "    plt.savefig (datafile.replace('.h5','_subtracted_' + str(chan_range[1] + 1) + '.png'))\n",
     "    display(HTML('<hr>'))\n",
     "\n",
     "shank_num = 1\n",
