tweaks for mountainsort4

--- a/h5_probe.ipynb
+++ b/h5_probe.ipynb
@@ -458,9 +458,9 @@
     "# potential bad channels filtered traces\n",
     "\n",
     "hf_probe = h5py.File(basefile.replace('.h5', '_probe_' + str(chan_range[1] ) + '.h5'), 'w')\n",
-    "hf_probe.create_dataset('x', data = filtered.iloc[:,0])\n",
+    "hf_probe.create_dataset('sample_index', data = filtered.iloc[:,0])\n",
     "hf_probe.create_dataset('unfiltered_y', data = subs[:,channels])\n",
-    "hf_probe.create_dataset('filtered_y', data = filtered.loc[:,channels])\n",
+    "hf_probe.create_dataset('channel_data', data = filtered.loc[:,channels])\n",
     "hf_probe.create_dataset('unfiltered_stats', data = unfiltered_stats)\n",
     "hf_probe.create_dataset('filtered_stats', data = filtered_stats)\n",
     "hf_probe.close()"
