--- a/h5_to_mda.ipynb
+++ b/h5_to_mda.ipynb
@@ -94,22 +94,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Transposed data has 64 rows and 1800000 columns.\n",
-      "[[ -3.05545165  -6.8230206   -6.00780822  -8.45008667]\n",
-      " [-13.10298963 -16.75994991  -6.90632146  -9.09917833]\n",
-      " [-22.48267215 -29.2897953   -9.25514762 -11.53635378]\n",
-      " ...\n",
-      " [-17.89416008 -17.88801166 -12.0585864  -41.31828338]\n",
-      " [  2.60314111   7.64385381  -1.64098894 -27.41894813]\n",
-      " [ 32.31736032  35.66310695  11.32732359 -16.52674916]]\n"
+      "Transposed data has 64 rows and 1800000 columns.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -118,8 +121,9 @@
     "print (\"Transposed data has \" + str(mn.shape[0]) + \" rows and \" + str(mn.shape[1]) + \" columns.\")\n",
     "\n",
     "# 32bit save function\n",
-    "mdaio.writemda32(ys[60000:75000, 0:4],'raw.mda')\n",
-    "print(ys[0:30000, 0:4])"
+    "mdaio.writemda32(ys[0:4, 60000:75000],'raw.mda')\n",
+    "\n",
+    "#print(ys[0:30000, 0:4])"
    ]
   },
   {
