--- a/h5_spikedetector.ipynb
+++ b/h5_spikedetector.ipynb
@@ -283,8 +283,6 @@
     "    events_x = {} # dict to catch event trace x (3 ms before and after peak)\n",
     "    events_y = {} # dict to catch event trace y (3 ms before and after peak)\n",
     "    events_b = {} # dict to catch event trace baseline (3 ms before and after peak)\n",
-    "    peaks_col = [] # list to catch peaks column names\n",
-    "    events_col = [] # list to catch events column names\n",
     "    print('Analyzing channel: ', end = ' ')\n",
     "    for j in channels:\n",
     "        print(j, end = ' ')\n",
@@ -295,7 +293,6 @@
     "        peak_b = []\n",
     "        rep = 0\n",
     "        while i < end-11: # search all the rows \n",
-    "            lpeak = -9999 # No previous peak\n",
     "            if i % mn == 0 and i < end - mn: # moving window every 10ms\n",
     "                savg = np.median(abs(smooth[i:i+mn,j]))\n",
     "                ssd = np.std(smooth[i:i+mn,j])*thresh\n",
@@ -303,19 +300,16 @@
     "                peak_x.append(i)\n",
     "                peak_y.append(raw[i,j])\n",
     "                peak_b.append(savg)\n",
-    "                events_col.append(str(j)+'_'+str(rep)) \n",
     "                events_x[str(j)+'_'+str(rep)] = list(range(i-10,i+10))\n",
     "                events_y[str(j)+'_'+str(rep)] = raw[i-10:i+10,j]\n",
     "                events_b[str(j)+'_'+str(rep)] = savg\n",
-    "                lpeak = peak_y # save this peak before moving to the next\n",
     "                rep = rep + 1\n",
     "            i = i + 1\n",
-    "        peaks_col.append(str(j))\n",
     "        peaks_x[str(j)] = peak_x\n",
     "        peaks_y[str(j)] = peak_y\n",
     "        peaks_b[str(j)] = peak_b\n",
-    "    peaks = [peaks_x,peaks_y,peaks_b,peaks_col]\n",
-    "    events = [events_x, events_y,events_b,events_col]\n",
+    "    peaks = [peaks_x,peaks_y,peaks_b]\n",
+    "    events = [events_x, events_y,events_b]\n",
     "    return peaks, events\n",
     "            \n",
     "\n",
@@ -585,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 62,
    "metadata": {
     "scrolled": false
    },
@@ -609,9 +603,9 @@
     "    for chan in channels:\n",
     "        col = str(chan)\n",
     "        col_len = len(dct[col])\n",
-    "        if col_len < ind_len:\n",
+    "        if col_len <= ind_len:\n",
     "            dct[col].extend(np.nan for t in range(col_len,ind_len)) # Fill in missing values with NaN\n",
-    "            df[col] = dct[col] \n",
+    "            df['chan'+col] = dct[col] \n",
     "    return df\n",
     "\n",
     "df_peaks_x = make_df_peak(peaks[0],channels)\n",
@@ -619,34 +613,8 @@
     "df_peaks_b = make_df_peak(peaks[2],channels)\n",
     "idx,id_len = get_index_from_dict(events[0])\n",
     "df_events_x = pd.DataFrame(events[0], columns = events[3], index = idx)\n",
-    "df_events_y = pd.DataFrame(events[1], columns = events[3], index = idx)\n",
-    "df_events_b = pd.DataFrame(events[2], columns = events[3], index = idx)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Save the events and peaks to new h5 files\n",
-    "- Smaller file size, good for further analysis in python"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hf = h5py.File(datafile.replace('.h5', '_events' + '.h5'), 'w')\n",
-    "hf.create_dataset('peaks_cols', data = df_peaks_x.columns.values.astype('S'))\n",
-    "hf.create_dataset('peaks_x', data = df_peaks_x)\n",
-    "hf.create_dataset('peaks_y', data = df_peaks_y)\n",
-    "hf.create_dataset('peaks_b', data = df_peaks_b)\n",
-    "hf.create_dataset('events_cols', data = df_events_x.columns.values.astype('S'))\n",
-    "hf.create_dataset('events_x', data = df_events_x)\n",
-    "hf.create_dataset('events_y', data = df_events_y)\n",
-    "hf.create_dataset('events_b', data = df_events_b)\n",
-    "hf.close()"
+    "#df_events_y = pd.DataFrame(events[1], columns = events[3], index = idx)\n",
+    "#df_events_b = pd.DataFrame(events[2], columns = events[3], index = idx)"
    ]
   },
   {
