Eventsort labels working, no clusters yet

--- a/h5_spikedetector.ipynb
+++ b/h5_spikedetector.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -218,10 +218,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1af74fa10>]"
+       "[<matplotlib.lines.Line2D at 0x156303fd0>]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -300,16 +300,15 @@
     "                peak_x.append(i)\n",
     "                peak_y.append(raw[i,j])\n",
     "                peak_b.append(savg)\n",
-    "                events_x[str(j)+'_'+str(rep)] = list(range(i-10,i+10))\n",
-    "                events_y[str(j)+'_'+str(rep)] = raw[i-10:i+10,j]\n",
-    "                events_b[str(j)+'_'+str(rep)] = savg\n",
+    "                events_x['xCh'+str(j)+'_'+str(rep)] = list(range(i-10,i+10))\n",
+    "                events_y['yCh'+str(j)+'_'+str(rep)] = raw[i-10:i+10,j]\n",
     "                rep = rep + 1\n",
     "            i = i + 1\n",
     "        peaks_x[str(j)] = peak_x\n",
     "        peaks_y[str(j)] = peak_y\n",
     "        peaks_b[str(j)] = peak_b\n",
     "    peaks = [peaks_x,peaks_y,peaks_b]\n",
-    "    events = [events_x, events_y,events_b]\n",
+    "    events = [events_x, events_y]\n",
     "    return peaks, events\n",
     "            \n",
     "\n",
@@ -336,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -537,7 +536,7 @@
    "source": [
     "start = int(0 * fs)\n",
     "end = int(29.5* fs)\n",
-    "channels = list(range(chan_num[0],chan_num[1],4))\n",
+    "chans = list(range(chan_num[0],chan_num[1],4))\n",
     "for chan in channels:\n",
     "    fig, ax = plt.subplots(figsize = (20,4))\n",
     "    ax.plot(xs[start:end],ys[start:end,chan])\n",
@@ -579,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -596,7 +595,7 @@
     "    max_index = list(range(0,max_len))\n",
     "    return max_index,max_len\n",
     "\n",
-    "def make_df_peak (dct, channels):\n",
+    "def make_df_peak (dct, channels, prefix):\n",
     "    \"\"\"Makes a dataframe out of a dict with uneven row numbers per column\"\"\"\n",
     "    ind,ind_len = get_index_from_dict(dct)\n",
     "    df = pd.DataFrame(index = ind)\n",
@@ -605,16 +604,18 @@
     "        col_len = len(dct[col])\n",
     "        if col_len <= ind_len:\n",
     "            dct[col].extend(np.nan for t in range(col_len,ind_len)) # Fill in missing values with NaN\n",
-    "            df['chan'+col] = dct[col] \n",
+    "            df[prefix +'Ch'+ col] = dct[col] \n",
     "    return df\n",
     "\n",
-    "df_peaks_x = make_df_peak(peaks[0],channels)\n",
-    "df_peaks_y = make_df_peak(peaks[1],channels)\n",
-    "df_peaks_b = make_df_peak(peaks[2],channels)\n",
+    "channels = list(range(chan_num[0],chan_num[1]))\n",
+    "df_peaks_x = make_df_peak(peaks[0],channels, 'x')\n",
+    "df_peaks_y = make_df_peak(peaks[1],channels, 'y')\n",
+    "df_peaks_b = make_df_peak(peaks[2],channels, 'b')\n",
+    "df_peaks = df_peaks_x.join([df_peaks_y, df_peaks_b])\n",
     "idx,id_len = get_index_from_dict(events[0])\n",
-    "df_events_x = pd.DataFrame(events[0], columns = events[3], index = idx)\n",
-    "#df_events_y = pd.DataFrame(events[1], columns = events[3], index = idx)\n",
-    "#df_events_b = pd.DataFrame(events[2], columns = events[3], index = idx)"
+    "df_events_x = pd.DataFrame(events[0], columns = events[0].keys(), index = idx)\n",
+    "df_events_y = pd.DataFrame(events[1], columns = events[1].keys(), index = idx)\n",
+    "df_events = df_events_x.join(df_events_y)"
    ]
   },
   {
@@ -628,14 +629,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_peaks = pd.DataFrame(peaks[0:3], columns = peaks[3])\n",
-    "df_events = pd.DataFrame(events[0:3], columns = events[3])\n",
     "df_peaks.to_csv(datafile.replace('.h5','_peaks.csv'))\n",
     "df_events.to_csv(datafile.replace('.h5', '_events.csv'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['xCh0', 'xCh4', 'xCh8', 'xCh12', 'xCh16', 'xCh20', 'xCh24', 'xCh28',\n",
+      "       'xCh32', 'xCh36', 'xCh40', 'xCh44', 'xCh48', 'xCh52', 'xCh56', 'xCh60',\n",
+      "       'yCh0', 'yCh4', 'yCh8', 'yCh12', 'yCh16', 'yCh20', 'yCh24', 'yCh28',\n",
+      "       'yCh32', 'yCh36', 'yCh40', 'yCh44', 'yCh48', 'yCh52', 'yCh56', 'yCh60',\n",
+      "       'bCh0', 'bCh4', 'bCh8', 'bCh12', 'bCh16', 'bCh20', 'bCh24', 'bCh28',\n",
+      "       'bCh32', 'bCh36', 'bCh40', 'bCh44', 'bCh48', 'bCh52', 'bCh56', 'bCh60'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_peaks.columns)"
    ]
   },
   {
