Made demos, fixed a bug with saving the events

--- a/h5_spikedetector.ipynb
+++ b/h5_spikedetector.ipynb
@@ -33,7 +33,7 @@
    "outputs": [],
    "source": [
     "# Assumes this python notebook, the data file, and the imp. file are in same dir\n",
-    "datafile = 'experiment_C20200330-174152_filtered_192.h5'\n",
+    "datafile = 'experiment_C20200330-175336_filtered_64.h5'\n",
     "shank_num = 1 # starting at 1\n",
     "fs = 30000 # sample rate\n",
     "window = [0, 30] # time window of analysis in seconds (for filtering, 4 mins max for most computers)\n",
@@ -427,6 +427,16 @@
    },
    "outputs": [],
    "source": [
+    "def get_index_from_dict(dct):\n",
+    "    \"\"\"Finds the max length of rows for all keys in a dict\"\"\"\n",
+    "    max_len = 0\n",
+    "    for keys,values in dct.items():\n",
+    "        for key in keys:\n",
+    "            tmp = len(values)\n",
+    "            if tmp > max_len:\n",
+    "                max_len = tmp\n",
+    "    max_index = list(range(0,max_len))\n",
+    "    return max_index, max_len\n",
     "idx,id_len = get_index_from_dict(events[0])\n",
     "df_events_x = pd.DataFrame(events[0], columns = events[0].keys(), index = idx)\n",
     "df_events_y = pd.DataFrame(events[1], columns = events[1].keys(), index = idx)\n",
@@ -641,9 +651,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "willow",
+   "display_name": "leaf_env",
    "language": "python",
-   "name": "willow"
+   "name": "leaf_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -655,7 +665,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
